...
    <RelativeLayout
        android:layout_width="411dp"
        android:layout_height="53dp"
        android:layout_margin="4dp">

        <TextView
            android:id="@+id/usernameView"
            android:layout_width="248dp"
            android:layout_height="41dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="12dp"
...
