...
        android:id="@+id/button_pale_map"
        style="@android:style/Widget.Material.Light.Button.Borderless"
        android:layout_width="140dp"
        android:layout_height="251dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/light_theme"
        android:text="Pale"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_dark_map"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/button_original_map" />
...
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/original"
        android:text="ORIGINAL"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button_view_paleCoins"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_view_paleCoins"
        style="@android:style/Widget.Material.Light.Button.Borderless"
        android:layout_width="200dp"
...
